Updated integration tests.